--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ckeditor4-react": "^4.0.0",
     "firebase": "^7.14.1",
     "firebase-tools": "^11.4.2",
     "node-sass": "^7.0.1",
