--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
