--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -12,6 +13,7 @@
     "ckeditor4-react": "^4.0.0",
     "firebase": "^7.14.1",
     "firebase-tools": "^11.4.2",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^16.13.1",
     "react-country-region-selector": "^3.0.1",
