--- a/firebase.json
+++ b/firebase.json
@@ -9,13 +9,9 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
+      "npm --prefix \"%RESOURCE_DIR%\" run lint",
+      "npm --prefix \"%RESOURCE_DIR%\" run build"
     ],
-    "ignore": [
-      "node_modules",
-      ".git",
-      "firebase-debug.log",
-      "firebase-debug.*.log"
-    ]
+    "source": "functions"
   }
 }
