--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,12 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.6.1",
-    "stripe": "^8.124.0"
+    "@babel/eslint-parser": "^7.15.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.14.1",
+    "stripe": "^8.169.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
