--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,13 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.0",
     "ckeditor4-react": "^4.0.0",
-    "firebase": "^7.14.1",
-    "firebase-tools": "^11.4.2",
+    "firebase": "^9.9.2",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
+    "notistack": "^2.0.5",
     "react": "^16.13.1",
     "react-country-region-selector": "^3.0.1",
     "react-dom": "^16.13.1",
+    "react-number-format": "^4.9.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "5.0.1",
